--- a/style.css
+++ b/style.css
@@ -8,11 +8,11 @@ header{
 }
 #name {
     font-family:Helvetica;
-    color: black;
-    font-size:40px;
+    color: navy;
+    font-size:48px;
 }
 #about-me{
-    font-size:12px;
+    font-size:16px;
 }
 h1 {
     font-family:Helvetica;
